fixing black overflow

--- a/style.css
+++ b/style.css
@@ -120,3 +120,7 @@ footer {
   text-decoration: underline;
   cursor: pointer;
 }
+
+#content_video{
+  overflow: hidden;
+}
